--- a/FilmProjem/Views/User/KullaniciKayit.cshtml
+++ b/FilmProjem/Views/User/KullaniciKayit.cshtml
@@ -1,85 +1,82 @@
-﻿
+﻿@model FilmProjem.DB.Kullanicilar
 @{
+    Layout = null;
     ViewBag.Title = "KullaniciKayit";
 }
 
+<html>
+<head>
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-<div class="form">
-
-    <ul class="tab-group">
-        <li class="tab active"><a href="#signup">Sign Up</a></li>
-        <li class="tab"><a href="#login">Log In</a></li>
-    </ul>
-
-    <div class="tab-content">
-        <div id="signup">
-            <h1>Ücretsiz Kaydolun</h1>
-
-            <form action="/" method="post">
-
-                <div class="top-row">
-                    <div class="field-wrap">
-                        <label>
-                            İsim<span class="req">*</span>
-                        </label>
-                        <input type="text" required autocomplete="off" />
-                    </div>
-
-                    <div class="field-wrap">
-                        <label>
-                            Soyisim<span class="req">*</span>
-                        </label>
-                        <input type="text" required autocomplete="off" />
+   
+<style>
+    .msg{
+        position:fixed;
+        top:50px;
+        right:30px;
+        width:240px;
+        height:150px;
+    }
+</style>
+</head>
+<body>
+    @if(Model != null)
+            {
+                <div class="msg">
+                    <div class="alert alert-warning" role="alert">
+                        Bu EPosta ile kayıt mevcuttur!
                     </div>
                 </div>
+                    
+                
+            }
+    <div class="form container">
 
-                <div class="field-wrap">
-                    <label>
-                        Email Adres<span class="req">*</span>
-                    </label>
-                    <input type="email" required autocomplete="off" />
-                </div>
 
-                <div class="field-wrap">
-                    <label>
-                        Şifre<span class="req">*</span>
-                    </label>
-                    <input type="password" required autocomplete="off" />
-                </div>
 
-                <button type="submit" class="button button-block" />Get Started</button>
+        <div class="row">
+            <div id="KAYIT OL">
+                <h1 class="text-center", clour="red">Ücretsiz Kaydolun</h1>
 
-            </form>
+                @using (Html.BeginForm("KullaniciKayit", "User"))
+                {
+                    <div class="top-row">
+                        <div class="field-wrap">
+                            <label class="form-label">
+                                İsim<span class="req">*</span>
+                            </label>
+                            @Html.TextBoxFor(x => x.Adi, new { @class = "form-control", required = true, autocomplete = "off" })
+                        </div>
 
-        </div>
+                        <div class="field-wrap">
+                            <label>
+                                Soyisim<span class="req">*</span>
+                            </label>
+                            @Html.TextBoxFor(x => x.Soyadi, new { @class = "form-control", required = true, autocomplete = "off" })
+                        </div>
 
-        <div id="login">
+                        <div class="field-wrap">
+                            <label>
+                                Email Adres<span class="req">*</span>
+                            </label>
+                            @Html.TextBoxFor(x => x.Eposta, new  { @class = "form-control", required = true, autocomplete = "off"  } ) 
+                        </div>
 
-            <form action="/" method="post">
+                        <div class="field-wrap form-input-group">
+                            <label>
+                                Şifre<span class="req">*</span>
 
-                <div class="field-wrap">
-                    <label>
-                        Email Address<span class="req">*</span>
-                    </label>
-                    <input type="email" required autocomplete="off" />
-                </div>
 
-                <div class="field-wrap">
-                    <label>
-                        Password<span class="req">*</span>
-                    </label>
-                    <input type="password" required autocomplete="off" />
-                </div>
+                            </label>
+                            @Html.TextBoxFor(x => x.Şifre, new { @class = "form-control", required = true, autocomplete = "off", type = "password" })
 
-                <p class="forgot"><a href="#">Forgot Password?</a></p>
+                        </div>
 
-                <button class="button button-block" />Log In</button>
+                    </div>
+                    <button type="submit" class="btn btn-success ">Kayıt Ol</button>
+                }
+            </div><!-- tab-content -->
 
-            </form>
-
-        </div>
-
-    </div>
-
-</div>
+    </div> <!-- /form -->
 
